--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,15 +38,23 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppInterface">
+
+            <!-- Launcher Intent Filter (For App Icon to Appear in Launcher) -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <!-- Deep Link Intent Filter (For Opening via URL myapp://chat/{friendId}) -->
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Correct Deep Link URI Scheme -->
                 <data android:scheme="myapp" android:host="chat" />
             </intent-filter>
+
         </activity>
 
         <meta-data
